Created a set of nodes
Created nodes and used those with parent nodes to change the HTML code of the document.

--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
    Case Problem 1
 
    New Accents Photography
-   Author: 
-   Date:   
+   Author: Gabriel Fuentes
+   Date: 4.2.19 
 
-   Filename: na_home.html
+   Filename: index.html
 -->
 
    <title>New Accents Photography</title>
@@ -64,5 +64,6 @@
          </span>
       </footer>
    </section>
+   <script type="text/javascript" src="na_styler.js"></script>
 </body>
 </html>
